# RQA2025

./: .bandit.yaml  .coveragerc  .dockerignore  .env.example  .env.prod  .env.production  .env.production.template  .env.template  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .quality-gate.json  .quality_baseline.json  .test_cache.json  1.1.0  ACHIEVEMENT_REPORT_48.40_PERCENT.md  ACHIEVEMENT_SUMMARY_1157_TESTS.md  AI_CODE_ANALYSIS_COMPREHENSIVE_SUMMARY_2025.md  AI_CODE_ANALYSIS_REPORT.md  AI_MARKET_ADAPTIVE_README.md  AI分析完成总结.md  APPLICATION_UPDATE_STATUS.md  ARCHITECTURE_LAYERS_REVIEW.md  ARCHITECTURE_LAYER_TEST_COVERAGE_FINAL_REPORT.md  ARCHITECTURE_LAYER_TEST_COVERAGE_SUMMARY.md  AUTOMATED_TESTING_PIPELINE_SUMMARY.md  BREAKTHROUGH_FINAL_REPORT_1018_TESTS.md  BROWSER_TEST_INSTRUCTIONS.md  CACHE_CODE_REVIEW_REPORT.md  CACHE_SYSTEM_CODE_REVIEW_REPORT.md  CANARY_DEPLOYMENT_README.md  CHANGELOG.md  CODE_QUALITY_IMPROVEMENT_FINAL_REPORT.md  CODE_QUALITY_IMPROVEMENT_SUMMARY.md  CODE_QUALITY_README.md  COMMON_PATTERNS_SPLIT_COMPLETE.md  COMPLETE_JOURNEY_REPORT_FINAL.md  COMPREHENSIVE_FINAL_REPORT_47.25_PERCENT.md  CONDITIONAL_SKIP_CLEANUP_REPORT.md  (+2359 more)
.docker/: daemon.json
AI_Art_Generator/: README.md  demo.py  test_backend.py
advanced_analytics/: analytics_engine.py  analytics_report.json  analytics_summary.txt
advanced_visualization/: dashboard_config.json  dashboard_engine.py
ai_model_integration/: enhanced_ai_engine.py
ai_models/: ai_test_optimization_plan_20251217_190120.json  ai_test_optimization_plan_20251217_191723.json
ai_quant_platform_v1/: ai_quant_platform_v1_plan.json
analysis_reports/: INFRASTRUCTURE_REVIEW_EXECUTION_SUMMARY.md  api_module_refactoring_plan.md  api_refactoring_analysis.json  infrastructure_api_analysis.json  infrastructure_core_analysis.json  infrastructure_distributed_analysis.json  infrastructure_interfaces_analysis.json  infrastructure_ops_analysis.json  infrastructure_optimization_analysis.json  infrastructure_other_modules_comprehensive_review.md  infrastructure_review_summary.txt  infrastructure_versioning_analysis.json  parameter_refactoring_examples.md  remaining_refactoring_tasks.md
audit/: audit_20251026_182604.json  audit_20251026_192908.json  audit_20251026_193341.json  audit_20251026_193654.json  audit_20251026_193914.json  audit_20251026_205911.json  audit_20251026_205952.json  audit_20251026_210829.json  audit_20251026_211052.json  audit_20251026_221526.json  audit_20251026_222225.json  audit_20251026_223515.json  audit_20251026_224303.json  audit_20251026_224540.json  audit_20251026_224904.json  audit_20251026_225126.json  audit_20251026_225911.json  audit_20251026_230134.json  audit_20251026_230515.json  audit_20251026_230747.json
auto_scaling/: scaling_engine.py
backups/: access_control_components.py.20251026_081157.backup  access_control_manager.py.20251026_081157.backup  config_backup_20251107_225542.json  decision_engine.py.20251026_100841.backup  orchestrator_configs.py.20251026_100841.backup  process_monitor.py.20251026_102346.backup  service_framework.py.20251026_102346.backup
bmi_research/: basic_signal_processor.py  bmi_demo.py  eeg_processor.py  requirements.txt
ci_cd_artifacts/: integration_test_results.json  security_report.json  unit_test_results.json
config/: ai_engine.json  alerts.yml  app_config.json  backup_strategy.json  bci_engine.json  chaos_experiments.yaml  cloud_native_deployment.yaml  complement_priority_config.json  config.development.yaml  config.production.yaml  config.yaml  coverage_monitor_config.json  coverage_monitoring.yaml  cross_market.yaml  database.json  database_config.json  default.json  deployment_checklist.json  deployment_config.json  development.json  development.yaml  elasticsearch.yml  email_config.json  env_example.txt  finalization.json  fusion_engine.json  gpu_config.yaml  health_check_integration.yaml  health_monitoring_production.yaml  historical_collection_config.json  historical_data_sources.yml  kibana.yml  local_config.ini  logging.json  main_config.yaml  market_monitor_config.json  microservices.yml  monitoring.json  monitoring_config.json  monitoring_dashboard.yaml  (+22 more)
config_api_docs/: README.md  __init__.md  config_event.md  config_exceptions.md  config_monitor.md  environment.md  simple_config_factory.md
config_refactor_backup/: core_unified_manager.py.bak  core_unified_manager_enhanced.py  factory.py.original  unified_manager.py.original
config_versions/: e721bb2e-49f0-4d7c-82a9-470eee3ec205.json  e721bb2e-49f0-4d7c-82a9-470eee3ec205_config.json
configs/: pipeline_config.yaml  version_history.json
coverage_reports/: coverage_history.json  coverage_monitor_report_30days.json  coverage_report_20251217_171923.md  coverage_report_20251217_192700.md  coverage_report_20251217_195748.md  coverage_report_20251217_205250.md  coverage_report_20251217_213643.md  coverage_report_20251217_220535.md  coverage_report_20251217_220941.md  coverage_report_20251217_224056.md  coverage_report_20251217_231041.md  coverage_report_20251217_234234.md  coverage_report_20251218_001708.md  coverage_report_20251218_002810.md  coverage_report_20251218_003851.md  coverage_report_20251218_004857.md  coverage_report_20251218_005723.md  coverage_report_20251218_010727.md  coverage_report_20251218_024215.md  coverage_report_20251218_040744.md  coverage_report_20251218_043714.md  coverage_report_20251218_044946.md  coverage_report_20251218_050211.md  coverage_report_20251218_051515.md  coverage_report_20251218_052709.md  coverage_report_20251218_075030.md  error_module_coverage.json  error_module_enhanced_coverage.json  error_module_final_coverage.json  error_module_final_enhanced_coverage.json  error_module_improved_coverage.json  infrastructure_coverage.xml
dashboards/: automation_dashboard.json  comprehensive_monitoring_dashboard.json
data/: .initialized  CONFIG_ENV_README.md  data_sources_config.json  data_sources_config.json.backup  scheduler_state.json  small_financial.csv
deploy/: .env.production  DEPLOYMENT_CONFIGURATION_CHECKLIST.md  Dockerfile  README.md  (+30 more)
(+17831 files in other folders)
