[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rqa2025"]
package-dir = {"rqa2025" = "src"}

[project]
name = "rqa2025"
version = "0.1.0"
authors = [
    {name="Your Name", email="your.email@example.com"},
]
description = "RQA2025 project"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"
