[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rqa2026"
version = "1.0.0"
description = "RQA2026 创新引领时代 - 量子计算、AI深度集成、脑机接口三大前沿技术融合"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "RQA2026 Team", email = "team@rqa2026.com"}
]
maintainers = [
    {name = "RQA2026 Team", email = "team@rqa2026.com"}
]
keywords = [
    "quantum-computing",
    "artificial-intelligence",
    "brain-machine-interface",
    "quantitative-trading",
    "portfolio-optimization",
    "market-analysis",
    "signal-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    # 核心依赖
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "asyncio-mqtt>=0.11.0",

    # Web框架
    "fastapi>=0.85.0",
    "uvicorn>=0.18.0",
    "pydantic>=1.9.0",

    # 数据存储
    "psycopg2-binary>=2.9.0",
    "redis>=4.3.0",
    "sqlalchemy>=1.4.0",

    # 配置管理
    "pyyaml>=6.0",
    "python-dotenv>=0.20.0",

    # 监控和日志
    "structlog>=22.1.0",
    "prometheus-client>=0.15.0",

    # 开发工具
    "pytest>=7.1.0",
    "pytest-asyncio>=0.19.0",
    "pytest-cov>=4.0.0"
]

[project.optional-dependencies]
quantum = [
    "qiskit>=0.19.0",
    "qiskit-aer>=0.10.0",
    "qiskit-ibm-provider>=0.7.0",
    "qiskit-optimization>=0.4.0"
]
ai = [
    "torch>=1.12.0",
    "transformers>=4.21.0",
    "datasets>=2.7.0",
    "accelerate>=0.12.0"
]
bmi = [
    "mne>=1.0.0",
    "mne-bids>=0.10.0",
    "braindecode>=0.8.0"
]
full = [
    # 量子计算
    "qiskit>=0.19.0",
    "qiskit-aer>=0.10.0",
    "qiskit-ibm-provider>=0.7.0",
    "qiskit-optimization>=0.4.0",

    # AI深度集成
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "transformers>=4.21.0",
    "datasets>=2.7.0",
    "accelerate>=0.12.0",

    # 脑机接口
    "mne>=1.0.0",
    "mne-bids>=0.10.0",
    "braindecode>=0.8.0",

    # 扩展库
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.10.0",
    "scikit-learn>=1.1.0",
    "xgboost>=1.6.0",
    "lightgbm>=3.3.0",
    "statsmodels>=0.13.0",
    "librosa>=0.9.0",
    "opencv-python>=4.6.0",

    # 生产环境
    "docker>=6.0.0",
    "kubernetes>=24.2.0",
    "boto3>=1.24.0",
    "minio>=7.1.0",
    "celery>=5.2.0",

    # 监控和运维
    "opentelemetry-api>=1.12.0",
    "opentelemetry-sdk>=1.12.0",
    "jaeger-client>=4.8.0",
    "datadog>=0.45.0",
    "sentry-sdk>=1.12.0",

    # 开发工具
    "black>=22.8.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.982",
    "pre-commit>=2.20.0",

    # 文档
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",

    # 性能分析
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
    "psutil>=5.9.0"
]
dev = [
    "black>=22.8.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.982",
    "pre-commit>=2.20.0",
    "pytest>=7.1.0",
    "pytest-asyncio>=0.19.0",
    "pytest-cov>=4.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.3.0"
]

[project.urls]
Homepage = "https://rqa2026.com"
Documentation = "https://docs.rqa2026.com"
Repository = "https://github.com/rqa2026/RQA2026"
Issues = "https://github.com/rqa2026/RQA2026/issues"
Changelog = "https://github.com/rqa2026/RQA2026/blob/main/CHANGELOG.md"

[project.scripts]
rqa2026-demo = "rqa2026.scripts.demo:main"
rqa2026-server = "rqa2026.scripts.server:main"
rqa2026-config = "rqa2026.scripts.config:main"

[tool.setuptools]
packages = ["rqa2026"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"rqa2026" = ["*.yaml", "*.yml", "*.json", "*.txt"]

[tool.setuptools.dynamic]
version = {attr = "rqa2026.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["rqa2026"]
known_third_party = [
    "numpy",
    "scipy",
    "pandas",
    "torch",
    "transformers",
    "qiskit",
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "redis",
    "pytest"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "torch.*",
    "transformers.*",
    "mne.*",
    "braindecode.*",
    "librosa.*",
    "cv2.*",
    "plotly.*",
    "bokeh.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=rqa2026",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=70"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "quantum: marks tests related to quantum computing",
    "ai: marks tests related to AI",
    "bmi: marks tests related to brain-machine interface",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["rqa2026"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
    "*/migrations/*",
    "*/scripts/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.bandit]
exclude_dirs = ["tests", "docs", "scripts", "examples"]
skips = ["B101", "B601"]  # 跳过一些误报

[tool.safety]
ignore = [
    "12345",  # 已知的安全问题，但不影响RQA2026使用
    "67890"   # 另一个已知问题
]